# Supersonic-Bladeless-Turbine

./: BL_Analysis.py  MachPostProcessCode.py  Pstag_PostProcess.py  README.md
SBTTD/: Makefile  README.md  environment.yml  pyproject.toml
SBTTD/1_Automation Codes/1_URANS Video Generator/: local_urans_animation2.py
SBTTD/1_Automation Codes/3_Sweep Study Codes/: SweepStudyCode.py
SBTTD/1_Automation Codes/4_Schlieren Image Processor/: schlierenProcessor.py
SBTTD/2_SBTTD Data Analysis Code/: MachPostProcessCode.py  backUpCode.py  plots.py  plotting.py  testing.py
SBTTD/2_SBTTD Data Analysis Code/3D Codes/Angled Geometry/: AxialForceCode.py  MOCCode.py
SBTTD/2_SBTTD Data Analysis Code/UnsteadyCode/: carpetCode-1-1.py  carpetCode-1-2.py  carpetCode.py  code2.py
SBTTD/2_SBTTD Data Analysis Code/UnsteadyCode/2_Results/: shock_integral_data.npz  wall_pressure_data.npz
SBTTD/2_SBTTD Data Analysis Code/utils/: __init__.py  computation.py  dataload_util.py  models.py  parameterComputation.py  plotting.py
SBTTD/4_Geometry Generator Code/: GeomGenerator.py  geomGenerator2.py  geomGeneratorV3-1.py  geomGeneratorV3.py
SBTTD/5_Data Structure Grapher/: dataStructGrapher.py
SBTTD/docs/: mkdocs.yml
SBTTD/docs/docs/: index.md
SBTTD/references/1_Tecplot Layout/: machLayout.lay
SBTTD/reports/figures/Mach Study/: axial_force_comparison.csv  axial_force_comparison_3theories.csv  axial_force_pivot_shockExp.csv  axial_force_pivot_smallPert.csv  pivot_combined.csv  pivot_shockExp.csv  (+1 more)
SBTTD/tecplot macros/: machContourExport.mcr  machContourExport1.mcr
(+1 files in other folders)
