[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "supersonic_bladeless_turbine_theoretical_development_(sbttd)"
version = "0.0.1"
description = "This repository includes the data analysis that was involved to understand the underlying physical mechanisms of the supersonic bladeless turbine and the low fidelity models that were proposed to generate optimized geometries for maximum power extraction with maximzed efficiency."
authors = [
  { name = "Hadie Hesham Sabbah" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.12.12"


[tool.ruff]
line-length = 99
src = ["supersonic_bladeless_turbine_theoretical_development_(sbttd)"]
include = ["pyproject.toml", "supersonic_bladeless_turbine_theoretical_development_(sbttd)/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["supersonic_bladeless_turbine_theoretical_development_(sbttd)"]
force-sort-within-sections = true

